Fixed issue with node build for client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.14.0-alpine as builder
+FROM node:alpine as builder
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
@@ -9,3 +9,5 @@ FROM nginx
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build/* /usr/share/nginx/html/
+RUN mkdir /usr/share/nginx/html/static/
+COPY --from=builder /app/build/* /usr/share/nginx/html/static/
